<resources>
    <string name="app_name">Gora</string>
    <string name="support_symbols">QWERTYUIOPASDFGHJKLZXCVBNMqwertyuiopasdfghjklzxcvbnm ЙЦУКЕНГШЩЗХЪФЫВАПРОЛДЖЭЯЧСМИТЬБЮЁйцукенгшщзхъфывапролджэячсмитьбюё</string>
    <string name="go">Давай</string>
    <string name="welcome_text">Добро пожаловать \nДавай начнём планировать \nтвой день!</string>
    <string name="be_creator">Будь творцом своей жизни!</string>
    <string name="my_habit">Мои привычки</string>
    <string name="add_habit_text">У вас пока нет привычек. \nЧтобы добавить привычку, \nНажмите «+»</string>
    <string name="done">сделано</string>
    <string name="skip">пропустить</string>
    <string name="done_cancel">Привычка выполнена!</string>
    <string name="skip_cancel">Привычка пропущена</string>
    <string name="gotit">Понятно</string>
    <string name="delete_swipe_left">Чтобы удалить привычку, свайпните влево \nпо карточке привычки</string>
    <string name="new_habit">Создать новую привычку</string>
    <string name="name_habit">Название привычки</string>
    <string name="icon_choice_text">Выберите иконку привычки</string>
    <string name="day_of_week_choice_text">Повторять по дням недели</string>
    <string name="monday">Пн</string>
    <string name="tuesday">Вт</string>
    <string name="wednesday">Ср</string>
    <string name="thursday">Чт</string>
    <string name="friday">Пт</string>
    <string name="saturday">Сб</string>
    <string name="sunday">Вс</string>
    <string name="add_habit">Добавить привычку</string>
    <string name="number_of_symbol">Введите не более 20 символов</string>


</resources>

    <!--TODO попробовать переписать support_symbols с помощью регулярных выражений -->