<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_detail"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/transparent_background"
        app:navigationIcon="@drawable/left_accessory"
        app:title="@string/new_habit"
        app:titleTextColor="@color/blue_fcbk" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/container_title"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/support_symbols"
            android:hint="@string/name_habit"
            android:text="" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/icon_choice_text"
        android:textColor="@color/sapphire"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:orientation="vertical">

        <GridLayout
            android:id="@+id/grid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:columnCount="5"
            android:orientation="horizontal"
            android:rowCount="2">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/emoji_1"
                android:layout_width="@dimen/emoji_choice"
                android:layout_height="@dimen/emoji_choice"
                android:layout_marginEnd="@dimen/dp_14"
                android:src="@drawable/are_you_ready"
                app:shapeAppearanceOverlay="@style/roundedEmoji" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/emoji_2"
                android:layout_width="@dimen/emoji_choice"
                android:layout_height="@dimen/emoji_choice"
                android:layout_marginEnd="@dimen/dp_14"
                android:src="@drawable/are_you_ready"
                app:shapeAppearanceOverlay="@style/roundedEmoji" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/emoji_3"
                android:layout_width="@dimen/emoji_choice"
                android:layout_height="@dimen/emoji_choice"
                android:layout_marginEnd="@dimen/dp_14"
                android:src="@drawable/are_you_ready"
                app:shapeAppearanceOverlay="@style/roundedEmoji" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/emoji_4"
                android:layout_width="@dimen/emoji_choice"
                android:layout_height="@dimen/emoji_choice"
                android:layout_marginEnd="@dimen/dp_14"
                android:src="@drawable/are_you_ready"
                app:shapeAppearanceOverlay="@style/roundedEmoji" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/emoji_5"
                android:layout_width="@dimen/emoji_choice"
                android:layout_height="@dimen/emoji_choice"
                android:src="@drawable/are_you_ready"
                app:shapeAppearanceOverlay="@style/roundedEmoji" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/emoji_6"
                android:layout_width="@dimen/emoji_choice"
                android:layout_height="@dimen/emoji_choice"
                android:layout_marginTop="@dimen/dp_14"
                android:layout_marginEnd="@dimen/dp_14"
                android:src="@drawable/are_you_ready"
                app:shapeAppearanceOverlay="@style/roundedEmoji" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/emoji_7"
                android:layout_width="@dimen/emoji_choice"
                android:layout_height="@dimen/emoji_choice"
                android:layout_marginTop="@dimen/dp_14"
                android:layout_marginEnd="@dimen/dp_14"
                android:src="@drawable/are_you_ready"
                app:shapeAppearanceOverlay="@style/roundedEmoji" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/emoji_8"
                android:layout_width="@dimen/emoji_choice"
                android:layout_height="@dimen/emoji_choice"
                android:layout_marginTop="@dimen/dp_14"
                android:layout_marginEnd="@dimen/dp_14"
                android:src="@drawable/are_you_ready"
                app:shapeAppearanceOverlay="@style/roundedEmoji" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/emoji_9"
                android:layout_width="@dimen/emoji_choice"
                android:layout_height="@dimen/emoji_choice"
                android:layout_marginTop="@dimen/dp_14"
                android:layout_marginEnd="@dimen/dp_14"
                android:src="@drawable/are_you_ready"
                app:shapeAppearanceOverlay="@style/roundedEmoji" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/emoji_10"
                android:layout_width="@dimen/emoji_choice"
                android:layout_height="@dimen/emoji_choice"
                android:layout_marginTop="@dimen/dp_14"
                android:src="@drawable/are_you_ready"
                app:shapeAppearanceOverlay="@style/roundedEmoji" />
        </GridLayout>
    </LinearLayout>

    <!--    <TextView-->
    <!--        android:id="@+id/date"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_margin="16dp"-->
    <!--        android:hint="date"-->
    <!--        android:text=""-->
    <!--        android:textSize="16sp" />-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/day_of_week_choice_text"
        android:textColor="@color/sapphire"
        android:textSize="16sp" />


    <com.google.android.material.button.MaterialButtonToggleGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp">

        <com.google.android.material.button.MaterialButton
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/week_height"
            android:layout_weight="1"
            android:text="@string/monday"
            android:textAllCaps="false"
            app:shapeAppearance="@style/roundedWeek"
            app:strokeColor="@color/periwinkle" />

        <com.google.android.material.button.MaterialButton
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/week_height"
            android:layout_weight="1"
            android:text="@string/tuesday"
            android:textAllCaps="false"
            app:strokeColor="@color/periwinkle" />

        <com.google.android.material.button.MaterialButton
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/week_height"
            android:layout_weight="1"
            android:text="@string/wednesday"
            android:textAllCaps="false"
            app:strokeColor="@color/periwinkle" />

        <com.google.android.material.button.MaterialButton
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/week_height"
            android:layout_weight="1"
            android:text="@string/thursday"
            android:textAllCaps="false"
            app:strokeColor="@color/periwinkle" />

        <com.google.android.material.button.MaterialButton
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/week_height"
            android:layout_weight="1"
            android:text="@string/friday"
            android:textAllCaps="false"
            app:strokeColor="@color/periwinkle" />

        <com.google.android.material.button.MaterialButton
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/week_height"
            android:layout_weight="1"
            android:text="@string/saturday"
            android:textAllCaps="false"
            app:strokeColor="@color/periwinkle" />

        <com.google.android.material.button.MaterialButton
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/week_height"
            android:layout_weight="1"
            android:text="@string/sunday"
            android:textAllCaps="false"
            app:shapeAppearance="@style/roundedWeek"
            app:strokeColor="@color/periwinkle" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="100dp"
            app:shapeAppearance="@style/roundedEmoji"
            android:text="@string/add_habit"
            android:textAllCaps="false"
            android:textSize="16sp"

            app:backgroundTint="@color/blue_fcbk" />
    </FrameLayout>

</LinearLayout>