<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sea_foam"
    android:layout_margin="4dp">

    <ImageView
        android:id="@+id/iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/welcome_main"
        app:layout_constraintBottom_toTopOf="@+id/text_view_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_be_creator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/be_creator"
        android:textColor="@color/sapphire"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/text_view_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv" />

    <TextView
        android:id="@+id/text_view_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome_text"
        android:textColor="@color/sapphire"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_be_creator" />

    <Button
        android:id="@+id/button"
        android:layout_width="320dp"
        android:layout_height="56dp"
        android:layout_margin="4dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="@color/blue_fcbk"
        android:text="@string/go"
        android:textAllCaps="false"
        android:textColor="@color/snow_white"
        android:textSize="16sp"
        app:backgroundTint="@color/blue_fcbk"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_welcome" />
</androidx.constraintlayout.widget.ConstraintLayout>
