<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_habit"
    style="@style/ListCardViewStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardBackgroundColor="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="16dp"
            android:src="@drawable/girl_runs_png"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
            tools:src="@drawable/girl_runs_png" />

        <TextView
            android:id="@+id/tv_name_habit"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/sapphire"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/frame_with_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_view"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Название привычки" />

        <FrameLayout
            android:id="@+id/frame_with_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_view"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_habit">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/frame_choice"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_skip"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_button_primary"
                    android:drawableLeft="@drawable/x"
                    android:layout_marginHorizontal="16dp"
                    android:padding="4dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="8dp"
                    android:gravity="center"
                    android:stateListAnimator="@null"
                    android:text="@string/skip"
                    android:textAllCaps="false"
                    android:textColor="@color/sapphire"
                    android:textSize="12sp"
                    tools:text="@string/skip" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_done"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_button_primary"
                    android:backgroundTint="@color/periwinkle"
                    android:drawableLeft="@drawable/check"
                    android:layout_marginEnd="16dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="8dp"
                    android:gravity="center"
                    android:stateListAnimator="@null"
                    android:text="@string/done"
                    android:textAllCaps="false"
                    android:textColor="@color/sapphire"
                    android:textSize="12sp"
                    tools:text="@string/done" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <FrameLayout
                android:id="@+id/frame_done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/message_done"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_button_primary"
                    android:drawableLeft="@drawable/check"
                    android:padding="4dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="100dp"
                    android:gravity="center"
                    android:stateListAnimator="@null"
                   android:backgroundTint="@color/habit_done"
                    android:text="@string/done_cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/sapphire"
                    android:textSize="12sp"
                    />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/frame_skip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/message_skip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_button_primary"
                    android:drawableLeft="@drawable/x"
                    android:padding="4dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="100dp"
                    android:gravity="center"
                    android:stateListAnimator="@null"
                    android:text="@string/skip_cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/sapphire"
                    android:textSize="12sp"
                   />

            </FrameLayout>

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>

    <!-- android:stateListAnimator="@null"  - Убирает тени-->

    <!-- TODO может переписать всё на TextView, вместо Button? -->